--- a/css/style.css
+++ b/css/style.css
@@ -803,7 +803,7 @@ ul, li {
   padding-bottom: 104px;
 }
 .img_fon .services .services_title {
-  font-size: 64px;
+  font-size: 48px;
   color: white;
   font-weight: 400;
 }
@@ -864,6 +864,87 @@ ul, li {
 @media only screen and (max-width: 409px) {
   .img_fon .services .services_menu .services_item .services_link .services_link_choice .services_link_choice_openClose {
     display: none;
+  }
+}
+.img_fon .about {
+  font-family: "Montserrat", sans-serif;
+  padding-left: 75px;
+  padding-right: 75px;
+  padding-bottom: 85px;
+  padding-top: 58px;
+}
+@media only screen and (max-width: 545px) {
+  .img_fon .about {
+    padding-left: 35px;
+    padding-right: 35px;
+  }
+}
+.img_fon .about .about_title {
+  font-size: 48px;
+  font-weight: 400;
+}
+.img_fon .about .about_info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+@media only screen and (max-width: 769px) {
+  .img_fon .about .about_info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+.img_fon .about .about_info .about_subtitle_and_img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.img_fon .about .about_info .about_subtitle_and_img .about_subtitle {
+  font-size: 16px;
+  opacity: 0.6;
+}
+.img_fon .about .about_info .about_subtitle_and_img .about_img {
+  width: 75%;
+}
+@media only screen and (max-width: 769px) {
+  .img_fon .about .about_info .about_subtitle_and_img .about_img {
+    width: 100%;
+  }
+}
+.img_fon .about .about_info .about_desc {
+  width: 424px;
+  margin-top: 8px;
+  line-height: 35px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+@media only screen and (max-width: 769px) {
+  .img_fon .about .about_info .about_desc {
+    width: 100%;
   }
 }
 
