--- a/scss/style.scss
+++ b/scss/style.scss
@@ -751,10 +751,10 @@ $fonttwo:  'Mulish', sans-serif;;
     }
 }
 
-  //услуги
+
 
 }
-//услуги
+//ФОН
 .img_fon{
   background-image: url("../img/fon.png");
   background-repeat: no-repeat;
@@ -763,6 +763,8 @@ $fonttwo:  'Mulish', sans-serif;;
   background-attachment: fixed;
   color: white;
 
+
+//услуги
     .services{
    width: 100%;
    //height: 100vh;
@@ -775,7 +777,7 @@ $fonttwo:  'Mulish', sans-serif;;
 
 
    .services_title{
-     font-size: 64px;
+     font-size: 48px;
      color: white;
      font-weight: 400;
 
@@ -830,6 +832,69 @@ $fonttwo:  'Mulish', sans-serif;;
        }
      }
    }
+}
+
+//обо мне, магия преображения
+.about{
+   font-family: $fontone;
+   padding-left: 75px;
+   padding-right: 75px;
+   padding-bottom: 85px;
+   padding-top: 58px;
+
+   @media only screen and (max-width: 545px){
+     padding-left: 35px;
+     padding-right: 35px;
+
+
+   }
+  .about_title{
+     font-size: 48px;
+     font-weight: 400;
+  }
+
+  .about_info{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-start;
+
+      @media only screen and (max-width: 769px){
+          flex-direction: column;
+          align-items: center;
+      }
+
+      .about_subtitle_and_img{
+               display: flex;
+               flex-direction: column;
+               justify-content: space-between;
+               align-items:flex-start;
+          .about_subtitle{
+            font-size: 16px;
+            opacity: .6;
+          }
+          .about_img{
+            width: 75%;
+
+            @media only screen and (max-width: 769px){
+                width: 100%;
+            }
+          }
+      }
+
+      .about_desc{
+        width: 424px;
+        margin-top: 8px;
+        line-height: 35px;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+        @media only screen and (max-width: 769px){
+            //line-height: 20px;
+            width: 100%;
+        }
+      }
+
+  }
 }
 
 }
