--- a/scss/style.scss
+++ b/scss/style.scss
@@ -70,7 +70,7 @@ pre {
    ========================================================================== */
 
 /**
- * Remove the gray background on active links in IE 10.
+ * Remove the gray background on  links in IE 10.
  */
 
 a {
@@ -310,7 +310,7 @@ textarea {
   font: inherit; /* 2 */
 }
 
-/* Interactive
+/* Inter
    ========================================================================== */
 
 /*
@@ -546,6 +546,9 @@ html{
            @media only screen and (max-width: 545px){
              margin-left: 0;
            }
+           @media only screen and (max-width: 336px){
+             display: none;
+           }
 
                 .header_nav_info_street{
                   margin-bottom: 5px;
@@ -623,6 +626,9 @@ html{
             margin-bottom: 33px;
             margin-top: 10px;
             opacity: 0.8;
+            .br{
+              display: none;
+            }
 
             @media only screen and (max-width: 545px){
                   margin-bottom: 23px;
@@ -632,6 +638,9 @@ html{
                font-size: 12px;
                text-align: center;
                margin-bottom: 43px;
+               .br{
+                 display: block;
+               }
             }
             @media only screen and (max-height: 460px){
               font-size: 10px;
@@ -827,13 +836,13 @@ html{
         padding: 35px 55px;
      }
      @media only screen and (max-width: 492px){
-        padding: 10px 15px;
+        padding: 10px 25px;
      }
 
 
      .services_item{
           width: 455px;
-          flex-wrap: nowrap;
+          padding: 0;
           @media only screen and (max-width: 715px){
             width: 320px;
           }
@@ -843,11 +852,36 @@ html{
        .services_link{
 
 
+
+         .services_link_decs{
+           font-size: 12px;
+           padding: 0 25px;
+           margin-top: 15px;
+           line-height: 20px;
+           max-height: 0;
+          overflow: hidden;
+          font-weight: 300;
+          transition: display 1.4s ease;
+
+         }
+
+
+
+
          .services_link_choice{
            display: flex;
            flex-direction: row;
            align-items: center;
            justify-content: space-between;
+           margin-top: 5px;
+           padding: 15px 20px;
+           border-radius: 10px;
+           transition: 0.5s;
+           cursor: pointer;
+           &:hover{
+             background-color: $buttoncolor;
+
+           }
 
 
 
@@ -866,9 +900,10 @@ html{
            }
            .services_link_choice_openClose{
              cursor: pointer;
-             transform: rotate(90deg);
-             &:hover{
 
+
+             &:target{
+                transform: rotate(45deg);
              }
            }
          }
@@ -898,6 +933,9 @@ html{
      font-weight: 400;
      @media only screen and (max-width: 545px){
        font-size: 38px;
+     }
+     @media only screen and (max-width: 350px){
+       font-size: 26px;
      }
   }
 
@@ -1142,9 +1180,13 @@ html{
      &:hover{
        opacity: 0.8;
      }
-     @media only screen and (max-width: 554px){
+     @media only screen and (max-width: 667px){
        right: 50px;
        bottom: 32px;
+     }
+     @media only screen and (max-width: 554px){
+       right: 35px;
+       bottom: 25px;
      }
    }
    .footer_btn_close{
@@ -1166,6 +1208,7 @@ html{
    }
 
 }
+//s
 .active_menu{
   //right: 0;
   box-shadow: -4px 4px 50px rgba(0, 0, 0, 0.7);
@@ -1186,6 +1229,10 @@ html{
 
 
 }
+.active_desc{
+  min-height: 200px;
+  display: block;
+}
  //моальное окно для связи
 .modal_window{
   position: fixed;
@@ -1194,7 +1241,7 @@ html{
   width: 100%;
   height: 100%;
   color: black;
-
+  z-index: -1;
   opacity: 0;
   display: flex;
   justify-content: center;
@@ -1239,6 +1286,12 @@ html{
           background-color: $menucolor;
           box-shadow: inset -4px -2px 4px rgba(0, 0, 0, 0.25);
           color: white;
+          @media only screen and(max-width: 359px){
+
+               width: 15rem;
+
+
+          }
         }
         .modal_btn{
           padding: 10px 15px;
@@ -1251,6 +1304,76 @@ html{
           width: 50%;
           text-align: center;
         }
+
+  }
+}
+.modal_sale{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: black;
+  z-index: -1;
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0,0, 0.8);
+  transition: all 0.8s ease 0s;
+
+  .modal_sale_cont{
+    position: relative;
+    max-width: 300px;
+    height: 300px;
+    background-color: $menucolor;
+
+    color: white;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 20px;
+    justify-content: center;
+    @media only screen and(max-width: 382px){
+      max-width: 200px;
+      height: 250px;
+    }
+
+    .modal_sale_title{
+      text-align: center;
+      font-size: 24px;
+      font-family: $fontone;
+      margin-bottom: 20px;
+
+    }
+    .modal_sale_btn{
+      border: none;
+      outline: none;
+      background-color: $buttoncolor;
+      border-radius: 10px;
+      padding: 10px 20px;
+      cursor: pointer;
+      margin-bottom: 20px;
+
+    }
+    .modal_sale_txt{
+        font-size: 18px;
+        font-family: $fonttwo;
+        text-align: center;
+    }
+    .modal_sale_close{
+      position: absolute;
+      text-align: right;
+      top: -5px;
+      right: -5px;
+      background-color: $buttoncolor;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 10px;
+      cursor: pointer;
+
+    }
 
   }
 }
@@ -1299,4 +1422,13 @@ html{
     }
    }
   }
+}
+
+
+
+
+//лишние движения
+.services_link.active_desc .services_link_decs{
+   min-height:200px;
+
 }
